# mobile-git-notes

./: .cursorrules  .gitignore  .pre-commit-config.yaml  .releaserc  .releaserc.json  CHANGELOG.md  LICENSE  README.md  docker-compose.yml  flake.nix  package-lock.json  package.json  process-compose.yaml
.github/: settings.yml
.github/workflows/: ci.yml  commitlint.yml  nix-ci.yml  release.yml
api/: README.md  pyproject.toml
api/app/: auth.py  db.py  github.py  main.py  models.py  security.py  settings.py
api/tests/: conftest.py  test_auth_exchange.py  test_github_endpoints.py  test_security.py
backend/: pyproject.toml
dev/: CACHE-PROOF.md  TESTING-CACHE.md  test-cache-usage.sh  test-cache.sh  verify-cache.sh
docs/: architecture.md
mobile/: .gitignore  README.md  app.json  babel.config.js  eslint.config.js  tamagui.config.ts
mobile-git-notes/: .envrc  README.md  app.json  babel.config.js  global.css  metro.config.js  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts  tamagui.config.ts  tsconfig.json
mobile-git-notes/app/: _layout.tsx  folder-setup.tsx  index.tsx  oauth.tsx
mobile-git-notes/app/(tabs)/: _layout.tsx  account.tsx  editor.tsx  home.tsx  profile.tsx  settings.tsx
mobile-git-notes/components/ui/: button.tsx  list-row.tsx
mobile-git-notes/hooks/: use-tamagui-theme-color.ts
mobile-git-notes/lib/: auth.ts  user-context.tsx
mobile/app/: index.tsx  oauth.tsx
mobile/lib/: api.ts  note-preferences.tsx  theme-preference.tsx  user-context.tsx
mobile/types/: expo-secure-store.d.ts
scripts/: dev.kitty-session  start-dev-kitty.sh
web/: .gitignore  README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  tamagui.config.ts  tsconfig.json
web/.tamagui/: tamagui-components.config.cjs  tamagui.config.cjs  tamagui.config.json
web/app/: ChangelogClient.tsx  NextTamaguiProvider.tsx  globals.css  layout.tsx  page.tsx  providers.tsx
(+6 files in other folders)
