[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Daniel Steman <daniel-steman@live.nl>"]
readme = "README.md"
license = "MIT"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = { version = ">=0.120.2,<0.121.0", extras = ["standard"] }
sqlalchemy = ">=2.0.0,<3.0.0"
httpx = ">=0.27.0,<0.28.0"
pyjwt = ">=2.8.0,<3.0.0"
cryptography = ">=42.0.0,<43.0.0"
pydantic-settings = ">=2.3,<3.0"
psycopg = { version = ">=3.1.0,<4.0.0", extras = ["binary"] }

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0,<9.0.0"
pytest-asyncio = ">=0.23.0,<1.0.0"
respx = ">=0.21.1,<0.22.0"
pytest-cov = ">=4.1.0,<5.0.0"
pre-commit = ">=3.7.0,<5.0.0"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["api/tests"]
asyncio_mode = "auto"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
