[project]
name = "app"
version = "0.1.0"
description = ""
authors = [{ name = "Daniel Steman", email = "daniel-steman@live.nl" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["fastapi[standard] (>=0.120.2,<0.121.0)"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
